Fix compilation warnings in AzureCredentialStorageIntegrationTest